test/error/report_const_changed.colgm
func main() -> i32 {
    var const_str_literal = "abc";
    const_str_literal[0] = 'a'; // report here
    const_str_literal = nil;

    var array_literal: [const i8; 16] = [];
    array_literal[0] = 'a'; // report here
    array_literal = nil;    // report here
    return 0;
}