test/error/report_const_changed.result
Error: cannot assign to "const i8"
  --> test/error/report_const_changed.colgm:3:5
  | 
3 |     const_str_literal[0] = 'a'; // report here
  |     ^^^^^^^^^^^^^^^^^^^^

Error: cannot assign to "const i8"
  --> test/error/report_const_changed.colgm:7:5
  | 
7 |     array_literal[0] = 'a'; // report here
  |     ^^^^^^^^^^^^^^^^

Error: cannot change array "i8*"
  --> test/error/report_const_changed.colgm:8:5
  | 
8 |     array_literal = nil;    // report here
  |     ^^^^^^^^^^^^^